--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,6 @@ jobs:
       CUDA: 10.1.105-1
       CUDA_SHORT: 10.1
       UBUNTU_VERSION: ubuntu1804
-      FORCE_CUDA: 1
       CUDA_ARCH: ${{matrix.cuda_arch}}
     runs-on: ubuntu-18.04
     strategy:
@@ -85,6 +84,8 @@ jobs:
           sudo apt update -qq
           sudo apt install -y cuda-${CUDA_SHORT/./-} cuda-cufft-dev-${CUDA_SHORT/./-}
           sudo apt clean
+          sudo cp /usr/local/cuda-10.2/include/* /usr/local/cuda/include
+          sudo cp -r /usr/local/cuda-10.2/lib64/* /usr/local/cuda/lib64/
           export CUDA_HOME=/usr/local/cuda-${CUDA_SHORT}
           export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${CUDA_HOME}/include:${LD_LIBRARY_PATH}
           export PATH=${CUDA_HOME}/bin:${PATH}
