--- a/configs/votenet/metafile.yml
+++ b/configs/votenet/metafile.yml
@@ -20,9 +20,9 @@ Models:
       - Task: 3D Object Detection
         Dataset: SUNRGBD
         Metrics:
-          AP@0.25: 59.07
-          AP@0.5: 35.77
-    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/votenet/votenet_16x8_sunrgbd-3d-10class/votenet_16x8_sunrgbd-3d-10class_20200620_230238-4483c0c0.pth
+          mAP@0.25: 59.78
+          mAP@0.5: 35.77
+    Weights: https://download.openmmlab.com/mmdetection3d/v1.0.0/models/votenet/votenet_16x8_sunrgbd-3d-10class/votenet_16x8_sunrgbd-3d-10class_20210820_162823-bf11f014.pth
 
   - Name: votenet_8x8_scannet-3d-18class.py
     In Collection: VoteNet
@@ -34,9 +34,9 @@ Models:
       - Task: 3D Object Detection
         Dataset: ScanNet
         Metrics:
-          AP@0.25: 62.90
-          AP@0.5: 39.91
-    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/votenet/votenet_8x8_scannet-3d-18class/votenet_8x8_scannet-3d-18class_20200620_230238-2cea9c3a.pth
+          mAP@0.25: 62.34
+          mAP@0.5: 40.82
+    Weights: https://download.openmmlab.com/mmdetection3d/v1.0.0/models/votenet/votenet_8x8_scannet-3d-18class/votenet_8x8_scannet-3d-18class_20210823_234503-cf8134fa.pth
 
   - Name: votenet_iouloss_8x8_scannet-3d-18class
     In Collection: VoteNet
@@ -50,5 +50,6 @@ Models:
       - Task: 3D Object Detection
         Dataset: ScanNet
         Metrics:
-          AP@0.25: 63.81
-          AP@0.5: 44.21
+          mAP@0.25: 63.02
+          mAP@0.5: 44.30
+    Weights: https://download.openmmlab.com/mmdetection3d/v1.0.0/models/votenet/votenet_iouloss_8x8_scannet-3d-18class/votenet_iouloss_8x8_scannet-3d-18class_20210825_191159-899c5d1e.pth
