--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,12 @@ jobs:
             mmcv: 1.8.0+cu101
             torchvision: 0.9.0+cu101
             cuda_arch: "7.0"
+          - python-version: 3.9
+            torch: 1.8.0+cu101
+            torch_version: torch1.8.0
+            mmcv: 1.8.0+cu101
+            torchvision: 0.9.0+cu101
+            cuda_arch: "7.0"
 
     steps:
       - uses: actions/checkout@v2
@@ -83,6 +89,9 @@ jobs:
           export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${CUDA_HOME}/include:${LD_LIBRARY_PATH}
           export PATH=${CUDA_HOME}/bin:${PATH}
           sudo apt-get install -y ninja-build
+      - name: Install dependencies for compiling onnx when python=3.9
+        run: pip install protobuf && sudo apt-get install libprotobuf-dev protobuf-compiler
+        if: ${{matrix.python-version == '3.9'}} 
       - name: Install Pillow
         run: pip install Pillow==6.2.2
         if: ${{matrix.torchvision < 0.5}}
