--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,9 +89,6 @@ jobs:
           export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${CUDA_HOME}/include:${LD_LIBRARY_PATH}
           export PATH=${CUDA_HOME}/bin:${PATH}
           sudo apt-get install -y ninja-build
-      - name: Install dependencies for compiling onnx when python=3.9
-        run: pip install protobuf && sudo apt-get install libprotobuf-dev protobuf-compiler
-        if: ${{matrix.python-version == '3.9'}} 
       - name: Install Pillow
         run: pip install Pillow==6.2.2
         if: ${{matrix.torchvision < 0.5}}
@@ -99,6 +96,7 @@ jobs:
         run: pip install numpy==1.19.5 torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
+          TORCH_CUDA_ARCH_LIST=${CUDA_ARCH}
           pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu101/${{matrix.torch_version}}/index.html
           pip install mmdet==2.14.0
           pip install mmsegmentation==0.14.1
