--- a/configs/imvoxelnet/metafile.yml
+++ b/configs/imvoxelnet/metafile.yml
@@ -11,14 +11,14 @@ Collections:
     README: configs/imvoxelnet/README.md
 
 Models:
-  - Name: imvoxelnet_kitti-3d-car
+  - Name: imvoxelnet_4x8_kitti-3d-car
     In Collection: ImVoxelNet
-    Config: configs/imvoxelnet/imvoxelnet_kitti-3d-car.py
+    Config: configs/imvoxelnet/imvoxelnet_4x8_kitti-3d-car.py
     Metadata:
-      Training Memory (GB): 15.0
+      Training Memory (GB): 14.8
     Results:
       - Task: 3D Object Detection
         Dataset: KITTI
         Metrics:
-          mAP: 17.4
-    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/imvoxelnet/imvoxelnet_kitti-3d-car_20210610_152323-b9abba85.pth
+          mAP: 17.26
+    Weights: https://download.openmmlab.com/mmdetection3d/v1.0.0/models/imvoxelnet/imvoxelnet_4x8_kitti-3d-car_20210830_003014-3d0ffdf4.pth
