--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
   build:
     env:
       FORCE_CUDA: 1
+      CUDA_ARCH: ${{matrix.cuda_arch}}
     runs-on: ubuntu-18.04
     container:
       image: pytorch/pytorch:1.6.0-cuda10.1-cudnn7-devel
@@ -78,8 +79,6 @@ jobs:
         run: python -m pip install numpy==1.19.5 torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
-          ls -l /usr/local | grep cuda
-          nvcc -V
           python -m pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu101/${{matrix.torch_version}}/index.html
           python -m pip install mmdet==2.14.0
           python -m pip install mmsegmentation==0.14.1
