Add PGD to Docker image
Copy the repository in the Dockerfile instead of cloning. This makes it
possible to work with latest modifications, such as PGD in the dev branch,
and also network bandwith does not get wasted.

--- a/model-index.yml
+++ b/model-index.yml
@@ -17,3 +17,4 @@ Import:
   - configs/votenet/metafile.yml
   - configs/fcos3d/metafile.yml
   - configs/imvoxelnet/metafile.yml
+  - configs/pgd/metafile.yml
