--- a/configs/pointpillars/metafile.yml
+++ b/configs/pointpillars/metafile.yml
@@ -167,3 +167,31 @@ Models:
           mAPH@L1: 63.3
           mAP@L2: 62.6
           mAPH@L2: 57.6
+
+  - Name: hv_pointpillars_secfpn_sbn-all_fp16_2x8_2x_nus-3d
+    In Collection: PointPillars
+    Config: configs/pointpillars/hv_pointpillars_secfpn_sbn-all_fp16_2x8_2x_nus-3d.py
+    Metadata:
+      Training Data: nuScenes
+      Training Memory (GB): 8.37
+    Results:
+      - Task: 3D Object Detection
+        Dataset: nuScenes
+        Metrics:
+          FP16 mAP: 35.19
+          FP16 NDS: 50.27
+    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_pointpillars_secfpn_sbn-all_fp16_2x8_2x_nus-3d/hv_pointpillars_secfpn_sbn-all_fp16_2x8_2x_nus-3d_20201020_222626-c3f0483e.pth
+
+  - Name: hv_pointpillars_fpn_sbn-all_fp16_2x8_2x_nus-3d
+    In Collection: PointPillars
+    Config: configs/pointpillars/hv_pointpillars_fpn_sbn-all_fp16_2x8_2x_nus-3d.py
+    Metadata:
+      Training Data: nuScenes
+      Training Memory (GB): 8.40
+    Results:
+      - Task: 3D Object Detection
+        Dataset: nuScenes
+        Metrics:
+          FP16 mAP: 39.26
+          FP16 NDS: 53.26
+    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_pointpillars_fpn_sbn-all_fp16_2x8_2x_nus-3d/hv_pointpillars_fpn_sbn-all_fp16_2x8_2x_nus-3d_20201021_120719-269f9dd6.pth
