--- a/configs/second/metafile.yml
+++ b/configs/second/metafile.yml
@@ -57,3 +57,29 @@ Models:
           mAPH@L1: 61.7
           mAP@L2: 58.9
           mAPH@L2: 55.7
+
+  - Name: hv_second_secfpn_fp16_6x8_80e_kitti-3d-car
+    In Collection: SECOND
+    Config: configs/second/hv_second_secfpn_fp16_6x8_80e_kitti-3d-car.py
+    Metadata:
+      Training Data: KITTI
+      Training Memory (GB): 2.9
+    Results:
+      - Task: 3D Object Detection
+        Dataset: KITTI
+        Metrics:
+          FP16 mAP: 78.72
+    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_second_secfpn_fp16_6x8_80e_kitti-3d-car/hv_second_secfpn_fp16_6x8_80e_kitti-3d-car_20200924_211301-1f5ad833.pth
+
+  - Name: hv_second_secfpn_fp16_6x8_80e_kitti-3d-3class
+    In Collection: SECOND
+    Config: configs/second/hv_second_secfpn_fp16_6x8_80e_kitti-3d-3class.py
+    Metadata:
+      Training Data: KITTI
+      Training Memory (GB): 2.9
+    Results:
+      - Task: 3D Object Detection
+        Dataset: KITTI
+        Metrics:
+          FP16 mAP: 67.4
+    Weights: https://download.openmmlab.com/mmdetection3d/v0.1.0_models/fp16/hv_second_secfpn_fp16_6x8_80e_kitti-3d-3class/hv_second_secfpn_fp16_6x8_80e_kitti-3d-3class_20200925_110059-05f67bdf.pth
