--- a/model-index.yml
+++ b/model-index.yml
@@ -16,3 +16,4 @@ Import:
   - configs/votenet/metafile.yml
   - configs/fcos3d/metafile.yml
   - configs/imvoxelnet/metafile.yml
+  - configs/pgd/metafile.yml
