Remove numba from readthedocs.txt and add runtime requirements in readthedocs.yml

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,4 +6,5 @@ python:
   version: 3.7
   install:
     - requirements: requirements/docs.txt
+    - requirements: requirements/runtime.txt
     - requirements: requirements/readthedocs.txt
