--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,7 +110,7 @@ jobs:
       matrix:
         os: [windows-2022]
         python: [3.8]
-        platform: [cpu, cu111]
+        platform: [cu111]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python }}
@@ -124,20 +124,16 @@ jobs:
         run: pip install torch==1.8.2+${{ matrix.platform }} torchvision==0.9.2+${{ matrix.platform }} -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
       - name: Install mmdet3d dependencies
         run: |
-          pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cpu/torch1.8/index.html --only-binary mmcv-full
+          pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/${{matrix.platform}}/torch1.8/index.html --only-binary mmcv-full
           python -m pip install mmdet==2.19.0
           python -m pip install mmsegmentation==0.20.0
           python -m pip install -r requirements/build.txt -r requirements/runtime.txt -r requirements/tests.txt
-      - name: Show pip list
-        run: pip list
       - name: Build and install
         run: pip install -e .
-      - name: Run unittests
-        run: coverage run --branch --source mmdet3d -m pytest tests
-      - name: Generate coverage report
-        run: |
-          coverage xml
-          coverage report -m
+      - name: Run unittests and generate coverage report
+        run: coverage run --branch --source mmdet3d -m pytest tests/
+             coverage xml
+             coverage report -m
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
