--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,7 +110,7 @@ jobs:
       matrix:
         os: [windows-2022]
         python: [3.8]
-        platform: [cu111]
+        platform: [cu101]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python }}
@@ -121,7 +121,7 @@ jobs:
         run: pip install pip --upgrade --user
       - name: Install PyTorch
         # As a complement to Linux CI, we test on PyTorch LTS version
-        run: pip install torch==1.8.2+${{ matrix.platform }} torchvision==0.9.2+${{ matrix.platform }} -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
+        run: pip install torch==1.8.0+${{ matrix.platform }} torchvision==0.9.0+${{ matrix.platform }} -f https://download.pytorch.org/whl/torch_stable.html
       - name: Install mmdet3d dependencies
         run: |
           pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/${{matrix.platform}}/torch1.8/index.html --only-binary mmcv-full
