--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,76 +27,38 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    env:
-      FORCE_CUDA: 1
-      CUDA_ARCH: ${{matrix.cuda_arch}}
-    runs-on: ubuntu-18.04
-    container:
-      image: pytorch/pytorch:1.6.0-cuda10.1-cudnn7-devel
-
+  build_windows:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.6, 3.7]
-        torch: [1.5.0+cu101, 1.6.0+cu101, 1.7.0+cu101, 1.8.0+cu101]
-        include:
-          - torch: 1.5.0+cu101
-            torch_version: torch1.5
-            torchvision: 0.6.0+cu101
-            mmcv_link: "torch1.5.0"
-            cuda_arch: "7.0"
-          - torch: 1.6.0+cu101
-            torch_version: torch1.6
-            mmcv_link: "torch1.6.0"
-            torchvision: 0.7.0+cu101
-            cuda_arch: "7.0"
-          - torch: 1.7.0+cu101
-            torch_version: torch1.7
-            mmcv_link: "torch1.7.0"
-            torchvision: 0.8.1+cu101
-            cuda_arch: "7.0"
-          - torch: 1.8.0+cu101
-            torch_version: torch1.8
-            mmcv_link: "torch1.8.0"
-            torchvision: 0.9.0+cu101
-            cuda_arch: "7.0"
-
+        os: [windows-2022]
+        python: [3.8]
+        platform: [cpu, cu111]
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install system dependencies
-        run: |
-          apt-get update && apt-get install -y ffmpeg libsm6 git ninja-build libglib2.0-0 libsm6 libxrender-dev python${{matrix.python-version}}-dev
-          apt-get clean
-          rm -rf /var/lib/apt/lists/*
-      - name: Install Pillow
-        run: python -m pip install Pillow==6.2.2
-        if: ${{matrix.torchvision < 0.5}}
+          python-version: ${{ matrix.python }}
+      - name: Upgrade pip
+        run: pip install pip --upgrade --user
       - name: Install PyTorch
-        run: python -m pip install numpy==1.19.5 torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
+        # As a complement to Linux CI, we test on PyTorch LTS version
+        run: pip install torch==1.8.2+${{ matrix.platform }} torchvision==0.9.2+${{ matrix.platform }} -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
       - name: Install mmdet3d dependencies
         run: |
-          python -m pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu101/${{matrix.torch_version}}/index.html
+          pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cpu/torch1.8/index.html --only-binary mmcv-full
           python -m pip install mmdet==2.19.0
           python -m pip install mmsegmentation==0.20.0
-          python -m pip install -r requirements.txt
+          python -m pip install -r requirements/build.txt -r requirements/runtime.txt -r requirements/tests.txt
       - name: Build and install
-        run: |
-          rm -rf .eggs
-          python setup.py check -m -s
-          TORCH_CUDA_ARCH_LIST=${CUDA_ARCH} python setup.py build_ext --inplace
+        run: pip install -e .
       - name: Run unittests and generate coverage report
-        run: |
-          coverage run --branch --source mmdet3d -m pytest tests/
-          coverage xml
-          coverage report -m
-      # Only upload coverage report for python3.7 && pytorch1.5
+        run: coverage run --branch --source mmdet3d -m pytest tests/
+             coverage xml
+             coverage report -m
       - name: Upload coverage to Codecov
-        if: ${{matrix.torch == '1.5.0+cu101' && matrix.python-version == '3.7'}}
-        uses: codecov/codecov-action@v1.0.10
+        uses: codecov/codecov-action@v2
         with:
           file: ./coverage.xml
           flags: unittests
