--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,8 +55,10 @@ jobs:
         run: pip install -e .
       - name: Run unittests and generate coverage report
         run: coverage run --branch --source mmdet3d -m pytest tests/
-             coverage xml
-             coverage report -m
+      - name: Generate coverage report
+        run: |
+          coverage xml
+          coverage report -m
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
