--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       matrix:
         os: [windows-2022]
         python: [3.8]
-        platform: [cpu, cu111]
+        platform: [cu111]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python }}
@@ -47,7 +47,7 @@ jobs:
         run: pip install torch==1.8.2+${{ matrix.platform }} torchvision==0.9.2+${{ matrix.platform }} -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
       - name: Install mmdet3d dependencies
         run: |
-          python -m pip install mmcv-full -f https://download.openmmlab.com/mmcv/dist/cu111/torch1.8/index.html
+          pip install mmcv-full==1.4.7 -f https://download.openmmlab.com/mmcv/dist/cu111/torch1.8/index.html --only-binary mmcv-full
           python -m pip install mmdet==2.19.0
           python -m pip install mmsegmentation==0.20.0
           python -m pip install -r requirements/build.txt -r requirements/runtime.txt -r requirements/tests.txt
